[gd_scene load_steps=25 format=3 uid="uid://dfgf55qyutu3m"]

[ext_resource type="ButtonGroup" uid="uid://cqypyhtfn5xtb" path="res://addons/FlowField/src/bottom_panel/tools_button_group.tres" id="1_c68si"]
[ext_resource type="Script" path="res://addons/FlowField/src/bottom_panel/bottom_panel.gd" id="1_veqkj"]
[ext_resource type="Texture2D" uid="uid://de415p38rb5tq" path="res://addons/FlowField/assets/ToolSelect.svg" id="3_sdj5p"]
[ext_resource type="Texture2D" uid="uid://byove2dx0qjn" path="res://addons/FlowField/assets/Edit.svg" id="4_2a3vi"]
[ext_resource type="Texture2D" uid="uid://nqc3som5oiox" path="res://addons/FlowField/assets/Line.svg" id="5_b67rm"]
[ext_resource type="Texture2D" uid="uid://6w58qnwrgstd" path="res://addons/FlowField/assets/Rectangle.svg" id="6_mmyyt"]
[ext_resource type="Texture2D" uid="uid://bh20beo1kyu5a" path="res://addons/FlowField/assets/Bucket.svg" id="7_v0ytr"]
[ext_resource type="Texture2D" uid="uid://c5o4ytvnybkwl" path="res://addons/FlowField/assets/ColorPick.svg" id="8_rxyhw"]
[ext_resource type="Texture2D" uid="uid://d3qchsydycjpw" path="res://addons/FlowField/assets/Eraser.svg" id="9_rgh01"]
[ext_resource type="Texture2D" uid="uid://c37gnp4qasv3d" path="res://addons/FlowField/assets/Grid.svg" id="10_cdo0c"]

[sub_resource type="InputEventKey" id="InputEventKey_labei"]
device = -1
keycode = 83
unicode = 115

[sub_resource type="Shortcut" id="Shortcut_gc31d"]
events = [SubResource("InputEventKey_labei")]

[sub_resource type="InputEventKey" id="InputEventKey_w7lkc"]
device = -1
keycode = 68
unicode = 100

[sub_resource type="Shortcut" id="Shortcut_af5qu"]
events = [SubResource("InputEventKey_w7lkc")]

[sub_resource type="InputEventKey" id="InputEventKey_qd8by"]
device = -1
keycode = 76
unicode = 108

[sub_resource type="Shortcut" id="Shortcut_phb3u"]
events = [SubResource("InputEventKey_qd8by")]

[sub_resource type="InputEventKey" id="InputEventKey_pl53l"]
device = -1
keycode = 82
unicode = 114

[sub_resource type="Shortcut" id="Shortcut_l6dcr"]
events = [SubResource("InputEventKey_pl53l")]

[sub_resource type="InputEventKey" id="InputEventKey_bqmic"]
device = -1
keycode = 66
unicode = 98

[sub_resource type="Shortcut" id="Shortcut_prpt7"]
events = [SubResource("InputEventKey_bqmic")]

[sub_resource type="InputEventKey" id="InputEventKey_ksuab"]
device = -1
keycode = 80
unicode = 112

[sub_resource type="Shortcut" id="Shortcut_7n62k"]
events = [SubResource("InputEventKey_ksuab")]

[sub_resource type="InputEventKey" id="InputEventKey_pyyk2"]
device = -1
keycode = 69
unicode = 101

[sub_resource type="Shortcut" id="Shortcut_lv1of"]
events = [SubResource("InputEventKey_pyyk2")]

[node name="BottomPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -251.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_veqkj")

[node name="tools_buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 24.0
grow_horizontal = 2

[node name="Selection" type="Button" parent="tools_buttons"]
layout_mode = 2
tooltip_text = "Selection (S)"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_group = ExtResource("1_c68si")
shortcut = SubResource("Shortcut_gc31d")
shortcut_in_tooltip = false
icon = ExtResource("3_sdj5p")
icon_alignment = 1

[node name="Paint" type="Button" parent="tools_buttons"]
layout_mode = 2
tooltip_text = "Paint (D)
Shift: Draw line.
Ctrl+Shift: Draw rectangle."
theme_type_variation = &"FlatButton"
toggle_mode = true
button_group = ExtResource("1_c68si")
shortcut = SubResource("Shortcut_af5qu")
shortcut_in_tooltip = false
icon = ExtResource("4_2a3vi")
icon_alignment = 1

[node name="Line" type="Button" parent="tools_buttons"]
layout_mode = 2
tooltip_text = "Line (L)"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_group = ExtResource("1_c68si")
shortcut = SubResource("Shortcut_phb3u")
shortcut_in_tooltip = false
icon = ExtResource("5_b67rm")
icon_alignment = 1

[node name="Rect" type="Button" parent="tools_buttons"]
layout_mode = 2
tooltip_text = "Rect (R)"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_group = ExtResource("1_c68si")
shortcut = SubResource("Shortcut_l6dcr")
shortcut_in_tooltip = false
icon = ExtResource("6_mmyyt")
icon_alignment = 1

[node name="Bucket" type="Button" parent="tools_buttons"]
layout_mode = 2
tooltip_text = "Bucket (B)"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_group = ExtResource("1_c68si")
shortcut = SubResource("Shortcut_prpt7")
shortcut_in_tooltip = false
icon = ExtResource("7_v0ytr")
icon_alignment = 1

[node name="VSeparator" type="VSeparator" parent="tools_buttons"]
visible = false
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="tools_buttons"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
tooltip_text = "Tile set value.
Page Up & Page Down to step value by 1.
Hold ALT: step value by 5.
Hold CTRL: step value by 10.
Hold ALT + CTRL: step value by 100."
min_value = -65536.0
max_value = 65536.0
rounded = true

[node name="VSeparator2" type="VSeparator" parent="tools_buttons"]
layout_mode = 2

[node name="Picker" type="Button" parent="tools_buttons"]
layout_mode = 2
tooltip_text = "Picker (P)
Alternatively hold Ctrl with other tools to pick tile."
theme_type_variation = &"FlatButton"
toggle_mode = true
shortcut = SubResource("Shortcut_7n62k")
shortcut_in_tooltip = false
icon = ExtResource("8_rxyhw")
icon_alignment = 1

[node name="Eraser" type="Button" parent="tools_buttons"]
layout_mode = 2
tooltip_text = "Eraser (E)
Alternatively use RMB to erase tiles."
theme_type_variation = &"FlatButton"
toggle_mode = true
shortcut = SubResource("Shortcut_lv1of")
shortcut_in_tooltip = false
icon = ExtResource("9_rgh01")
icon_alignment = 1

[node name="Control" type="Control" parent="tools_buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Grid" type="Button" parent="tools_buttons"]
layout_mode = 2
tooltip_text = "Toggle grid visibility."
theme_type_variation = &"FlatButton"
toggle_mode = true
button_pressed = true
shortcut = SubResource("Shortcut_lv1of")
shortcut_in_tooltip = false
icon = ExtResource("10_cdo0c")
icon_alignment = 1

[connection signal="pressed" from="tools_buttons/Selection" to="." method="_change_tool_type" binds= [1]]
[connection signal="pressed" from="tools_buttons/Paint" to="." method="_change_tool_type" binds= [2]]
[connection signal="pressed" from="tools_buttons/Line" to="." method="_change_tool_type" binds= [4]]
[connection signal="pressed" from="tools_buttons/Rect" to="." method="_change_tool_type" binds= [8]]
[connection signal="pressed" from="tools_buttons/Bucket" to="." method="_change_tool_type" binds= [16]]
[connection signal="value_changed" from="tools_buttons/SpinBox" to="." method="_change_bias"]
[connection signal="toggled" from="tools_buttons/Picker" to="." method="_toggle_picker"]
[connection signal="toggled" from="tools_buttons/Eraser" to="." method="_toggle_eraser"]
[connection signal="toggled" from="tools_buttons/Grid" to="." method="_toggle_grid"]
